--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure CA certificate exists on foreman_ca_host
+- name: 'Ensure CA certificate exists on foreman_ca_host'
   stat:
     path: "{{ foreman_ca_cert }}"
   register: g_ca_cert_stat_result
@@ -11,7 +11,7 @@
       {{ foreman_ca_host }}.
   when: not g_ca_cert_stat_result.stat.exists | bool
 
-- name: Check status of proxy certificates on ca server
+- name: 'Check status of proxy certificates on ca server'
   stat:
     path: "/etc/puppetlabs/puppet/ssl/{{ item }}"
   with_items:
@@ -26,25 +26,25 @@
                                             | map(attribute='stat.exists')
                                             | list) }}"
 
-- name: Create local temp directory for syncing certs
+- name: 'Create local temp directory for syncing certs'
   local_action: command mktemp -d /tmp/foreman-ansible-XXXXXXX
   register: proxy_cert_mktemp
   changed_when: False
   become: no
 
-- name: Create create puppet ssl path in tmp directory
+- name: 'Create create puppet ssl path in tmp directory'
   local_action: file path="{{ proxy_cert_mktemp.stdout }}/{{ item }}" state=directory
   with_items:
     - /certs
     - /private_keys
 
-- name: Generate the proxy server certificate
+- name: 'Generate the proxy server certificate'
   command: >
      /opt/puppetlabs/puppet/bin/puppet cert generate "{{ ansible_fqdn }}"
   when: proxy_certs_missing
   delegate_to: "{{ foreman_ca_host }}"
 
-- name: Retrieve the proxy certificates (ca, crl and public cert) from the master
+- name: 'Retrieve the proxy certificates (ca, crl, public and private cert) from the master'
   fetch:
     src: "/etc/puppetlabs/puppet/ssl/{{ item }}"
     dest: "{{ proxy_cert_mktemp.stdout }}/{{ item }}"
@@ -54,19 +54,11 @@
   with_items:
     - "certs/ca.pem"
     - "certs/{{ ansible_fqdn }}.pem"
+    - "private_keys/{{ ansible_fqdn }}.pem"
     - "crl.pem"
   delegate_to: "{{ foreman_ca_host }}"
 
-- name: Retrieve the proxy certificates (private key) from the master
-  fetch:
-    src: "/etc/puppetlabs/puppet/ssl/private_keys/{{ ansible_fqdn }}.pem"
-    dest: "{{ proxy_cert_mktemp.stdout }}/private_keys/{{ ansible_fqdn }}.pem"
-    flat: yes
-    fail_on_missing: yes
-    validate_checksum: yes
-  delegate_to: "{{ foreman_ca_host }}"
-
-- name: Ensure certificate directory exists
+- name: 'Ensure certificate directory exists'
   file:
     path: "{{ item }}"
     state: directory
@@ -74,7 +66,7 @@
     - /etc/puppetlabs/puppet/ssl/certs
     - /etc/puppetlabs/puppet/ssl/private_keys
 
-- name: copy the ca and public cert to proxy
+- name: 'Copy the certificates to proxy'
   copy:
     src: "{{ proxy_cert_mktemp.stdout }}/{{ item }}"
     dest: "/etc/puppetlabs/puppet/ssl/{{ item }}"
@@ -84,7 +76,7 @@
     - "private_keys/{{ ansible_fqdn }}.pem"
     - "crl.pem"
 
-- name: Delete local temp directory
+- name: 'Delete local temp directory'
   local_action: file path="{{ proxy_cert_mktemp.stdout }}" state=absent
   changed_when: False
   become: no
